--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,7 @@ body{
 }
 .header_flex, .about, .adress, .plan_flex, .footer_flex{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
