--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,8 @@ body{
 @media screen and (max-width: 600px) {
     .center_content {
         margin: 0 auto;
+        flex-direction: column;
+        overflow-wrap: break-word;
     }
 }
 .header, .footer{
@@ -85,7 +87,7 @@ body{
 }
 @media screen and (max-width: 600px) {
     .about_title {
-      font-size: 40px;
+      font-size: 60px;
     }
   }
 .about_text{
